feat: Add get export item file API
